<resources>
    <string name="app_name">Najdi Ma</string>
    <string name="logo_descriptions">Logo Najdi Ma</string>

    <!-- close app -->
    <string name="exitDialogTitle">Ste si istý/á, že chcete zavrieť aplikáciu?</string>
    <string name="positive">Áno</string>
    <string name="negative">Nie</string>

    <!-- menu -->
    <string name="menu_home">DOMOV</string>
    <string name="menu_i_found">NAŠIEL SOM</string>
    <string name="menu_i_lost">STRATIL SOM</string>
    <string name="menu_found">NÁJDENÉ ZVIERATKÁ</string>
    <string name="menu_lost">STRATENÉ ZVIERATKÁ</string>

    <!-- home activity -->
    <string name="quote" translatable="true">Keby sa človek stratil psovi,\n
        tak by ho pes nikdy neprestal hľadať.</string>
    <string name="btn_i_found">NAŠIEL SOM</string>
    <string name="btn_i_lost">STRATIL SOM</string>
    <string name="title_activity_home">DOMOV</string>

    <!-- i found activity -->
    <string name="name">Meno</string>
    <string name="animalSpecies">Druh</string>
    <string name="breed">Plemeno</string>
    <string name="size">Veľkosť</string>
    <string name="sex">Pohlavie</string>
    <string name="city">Mesto</string>
    <string name="phoneNumber">Telefónne číslo</string>
    <string name="info">Ďalšie informácie</string>
    <string name="size_small">malá</string>
    <string name="size_middle">stredná</string>
    <string name="size_big">veľká</string>
    <string name="sex_female">samica</string>
    <string name="sex_male">samec</string>

    <!-- welcome activity -->
    <string name="btn_sign_in">Prihlásiť sa</string>
    <string name="btn_sign_up">Registrovať sa</string>
    <string name="author">powered by VolckinDesign</string>

    <!-- sign in/sign up activity -->
    <string name="email">Prihlasovací email</string>
    <string name="user_name">Použivateľské meno</string>
    <string name="password">Heslo</string>
    <string name="repeat_password">Opakuj heslo</string>
    <string name="phone">Telefónne číslo</string>
    <string name="conditions">Prečítal som si zásady ochrany súkromia a súhlaism s nimi</string>
    <string name="wrongUsername">Prihlasovacie meno neexistuje.</string>
    <string name="wrongPassword">Heslo je nesprávne.</string>
    <string name="usernamePasswordEmpty">Prihlasovacie meno a heslo je prázdne!</string>
    <string name="usernameEmpty">Prihlasovacie meno je prázdne!</string>
    <string name="passwordEmpty">Heslo je prázdne!</string>
    <string name="usernamePasswordChars">Prihlasovacie meno a hesluo musia mať minimálne 5 znakov!</string>
    <string name="usernameChars">Prihlasovacie meno musí mať minimálne 5 znakov!</string>
    <string name="passwordChars">Heslo musí mať minimálne 5 znakov!</string>
    <string name="noEqualsPasswords">Heslá sa nezhodujú!</string>
    <string name="emptyFields">Niektoré polia nie sú vyplnené</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="_0_3" translatable="false">0/3</string>


</resources>
