<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <Button
            android:text="@string/btn_i_lost"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_i_lost"
            android:layout_marginBottom="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:visibility="visible"
            android:fontFamily="@font/righteous"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:background="@drawable/login_button"
            app:layout_constraintHorizontal_bias="0.497"
    />
    <ImageView
            android:layout_width="256dp"
            android:layout_height="306dp"
            app:srcCompat="@drawable/najdima_logo_1"
            android:id="@+id/logo_login_activity3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.465"
            android:contentDescription="@string/logo_descriptions"
            android:layout_marginStart="16dp"
            android:layout_marginTop="116dp"/>
    <Button
            android:text="@string/btn_i_found"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_i_found"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            tools:visibility="visible"
            android:fontFamily="@font/righteous"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:background="@drawable/login_button"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_i_lost"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/logo_login_activity3"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.529"/>
    <TextView
            android:text="@string/quote"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_author4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/righteous"
            android:textColor="@color/gradientCenterColor" android:layout_marginBottom="156dp"
            android:textAlignment="center" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_i_lost" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_author5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/righteous"
            android:textColor="@color/gradientCenterColor" android:layout_marginBottom="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>