<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">

    <ImageView
            android:layout_width="256dp"
            android:layout_height="306dp" app:srcCompat="@drawable/najdima_logo_1"
            android:id="@+id/logo_login_activity"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/logo_descriptions"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.476"/>
    <!--
    <EditText
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_email2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/user_name" android:singleLine="true" android:typeface="normal"
            android:textAlignment="viewStart" android:backgroundTint="@color/gradientCenterColor"
            android:paddingLeft="8dp" android:paddingRight="8dp" android:drawablePadding="8dp"
            android:autofillHints="" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_login_activity" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"/>-->
    <EditText
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:paddingLeft="8dp" android:paddingRight="8dp" android:drawablePadding="8dp"
            android:id="@+id/et_email"
            android:textAlignment="viewStart" android:backgroundTint="@color/gradientCenterColor"
            android:visibility="visible" android:hint="@string/email" android:drawableStart="@drawable/ic_username"
            android:autofillHints="" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_login_activity" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password"
            android:drawableLeft="@drawable/ic_password" android:backgroundTint="@color/gradientCenterColor"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:drawablePadding="8dp" android:paddingLeft="8dp"
            android:paddingRight="8dp" android:hint="@string/password"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/et_email"/>
    <Button
            android:text="@string/btn_sign_in"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sign_in"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:visibility="visible"
            android:fontFamily="@font/righteous"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:background="@drawable/login_button"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_author2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/righteous"
            android:textColor="@color/gradientCenterColor" android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>