<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/najdima_logo_1"
            android:id="@+id/logo_login_activity"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.495"
            android:contentDescription="@string/logo_descriptions" app:layout_constraintVertical_bias="0.305"/>
    <Button
            android:text="@string/btn_sign_in"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sign_in" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_login_activity" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" tools:visibility="visible" android:fontFamily="@font/righteous"
            android:textSize="18sp" android:textColor="#FFFFFF"
            android:textAlignment="center" android:background="@drawable/login_button"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.06"/>
    <Button
            android:text="@string/btn_sign_up"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sign_up" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_login_activity" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" tools:visibility="visible" android:fontFamily="@font/righteous"
            android:textSize="18sp" android:textColor="#FFFFFF"
            android:textAlignment="center" android:background="@drawable/login_button"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.315"/>
</androidx.constraintlayout.widget.ConstraintLayout>