<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".IFoundActivity">
    <!--

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_home"
            app:menu="@menu/activity_home_drawer" />
-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/top_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteX="0dp"
                app:layout_editor_absoluteY="0dp">

            <ImageButton
                    android:id="@+id/btn_menu"
                    android:layout_width="36dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_menu_button_white" />

            <TextView
                    android:id="@+id/activityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                    android:id="@+id/btn_ok"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_ok_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/photos"
                        android:layout_width="match_parent"
                        android:layout_height="330dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/no_image"
                        android:scaleType="fitCenter"/>

                <ImageView
                        android:id="@+id/btn_add_photo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="@id/photos"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_add_photo" />

                <ImageView
                        android:id="@+id/btn_left"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_chevron_left"
                        android:visibility="invisible"/>

                <ImageView
                        android:id="@+id/btn_right"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/photos"
                        app:srcCompat="@drawable/ic_chevron_right"
                        android:visibility="invisible" />

                <TextView
                        android:id="@+id/txt_numOfPhotos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/_0_3"
                        android:textColor="@color/gradientCenterColor"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@id/photos"
                        app:layout_constraintStart_toStartOf="parent"
                        android:visibility="invisible"/>

                <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="4dp"
                        android:background="@drawable/top_bg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/photos">

                </LinearLayout>

                <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_name"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/animalSpecies"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <EditText
                        android:id="@+id/et_animalSpecies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/txt_logo"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/animalSpecies"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_name" />

                <EditText
                        android:id="@+id/et_breed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/txt_logo"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/breed"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_animalSpecies" />

                <AutoCompleteTextView
                        android:id="@+id/at_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:drawableStart="@drawable/txt_logo"
                        android:drawablePadding="10dp"
                        android:hint="@string/size"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_breed"
                        android:completionThreshold="1"/>

                <AutoCompleteTextView
                        android:id="@+id/at_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:completionThreshold="1"
                        android:drawableStart="@drawable/ic_sex"
                        android:drawablePadding="10dp"
                        android:hint="@string/sex"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/at_size" />

                <EditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_city"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/city"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/at_sex" />

                <EditText
                        android:id="@+id/et_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_info"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/info"
                        android:inputType="textPersonName"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_city" />

                <ImageView
                        android:id="@+id/footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/et_info"
                        app:srcCompat="@drawable/footer" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>